--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <header class="header">
         <div class="menu">
-            <img src="/img/first-screen__logo.png" alt="" />
+            <img src="img/first-screen__logo.png" alt="" />
             </button>
             <nav>
                 <ul class="nav">
