--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
         <div class="title">
 
             <h1 class="sale_title tit">Жилой комплекс <br> в историческом центре</h1>
-            <img class="mouse" src="/img/mouse.png" alt="" />
+            <img class="mouse" src="img\mouse.png" alt="" />
         </div>
 
         <div class="placeholder-telephon">
             <div class="placeholder">
-                <div class="icon-placeholder"><img src="/img/Group (5).png" alt="" /></div>
+                <div class="icon-placeholder"><img src="img\Group (5).png" alt="" /></div>
                 <div>
                     <p class="adress anim">Наб. реки Фонтанки 10-15</p>
                 </div>
 
             </div>
             <div class="telephon">
-                <div class="icon-telephon"><img src="/img/Group (4).png" alt="" style="padding: 2%;" /></div>
+                <div class="icon-telephon"><img src="img\Group (4).png" alt="" style="padding: 2%;" /></div>
                 <div>
                     <p class="telephon_ anim">8 (812) 123-45-675</p>
                 </div>
@@ -65,19 +65,19 @@
     <div class="first-screen">
         <div class="testimonials">
             <div class="icon_bench icon_testimonials">
-                <img src="/img/Group (2).png" alt="" />
+                <img src="img\Group (2).png" alt="" />
                 <p class="roboto-300">Рядом исторические парки и скверы</p>
             </div>
             <div class="icon_building icon_testimonials">
-                <img src="/img/Group (1).png" alt="" />
+                <img src="img\Group (1).png" alt="" />
                 <p class="roboto-300">Полностью обустроенный</p>
             </div>
             <div class="icon_fountain icon_testimonials">
-                <img src="/img/Group.png" alt="" />
+                <img src="img\Group.png" alt="" />
                 <p class="roboto-300">10 фонтанов на территории</p>
             </div>
             <div class="icon_bicycle icon_testimonials">
-                <img src="/img/Group (3).png" alt="" />
+                <img src="img\Group (3).png" alt="" />
                 <p class="roboto-300">6 км велодорожек</p>
             </div>
         </div>
@@ -134,8 +134,8 @@
 
     <div class="maps">
         <div class="video_button">
-            <img class="video" src="/img/Rectangle2.png">
-            <img class="play_button" src="/img/play-button.png" alt="">
+            <img class="video" src="img\Rectangle2.png">
+            <img class="play_button" src="img\play-button.png" alt="">
         </div>
         <div>
             <h1 class="sale_title">Район на карте</h1>
@@ -161,7 +161,7 @@
 
 
     <footer class="footer">
-        <img src="/img/first-screen__logo.png" alt="">
+        <img src="img\first-screen__logo.png" alt="">
         <div>
             <ul>
                 <li class="item base">О комплексе</li>
@@ -187,10 +187,10 @@
                 <li class="item base">Отдел продаж: 10:00 - 20:00</li>
                 <li class="item base">E-mail: vip@housevip.ru</li>
                 <li class="item base">
-                    <img src="/img/Vector.png" alt="">
-                    <img src="/img/Group6.png" alt="">
-                    <img src="/img/Group7.png" alt="">
-                    <img src="/img/instagram.png" alt="">
+                    <img src="img\Vector.png" alt="">
+                    <img src="img\Group6.png" alt="">
+                    <img src="img\Group7.png" alt="">
+                    <img src="img\instagram.png" alt="">
                 </li>
             </ul>
         </div>
