--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <img class="play_button" src="img\play-button.png" alt="">
         </div>
         <div>
-            <h1 class="sale_title">Район на карте</h1>
+            <h1 class="sale_title" style="margin-bottom: 5%;">Район на карте</h1>
             <div style="display: flex;
             justify-content: center;">
                 <div class="map_div"><iframe class="google_map"
