--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
     <footer class="footer">
-        <img src="img\first-screen__logo.png" alt="">
+        <img class="img-sm" src="img\first-screen__logo.png" alt="">
         <div>
             <ul>
                 <li class="item base">О комплексе</li>
